spring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["192.168.49.2"],"port":80,"protocol":"HTTP","serviceName":"default:jikan-ga-aru-server","ingressName":"default:time","hostname":"jikan.localhost","path":"/","allNodes":false}]
  creationTimestamp: '2024-07-14T04:33:50Z'
  generation: 4
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: nginx-ingress-controller
      operation: Update
      subresource: status
      time: '2024-07-14T04:34:48Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/publicEndpoints: {}
        f:spec:
          f:rules: {}
      manager: rancher
      operation: Update
      time: '2024-07-14T05:08:07Z'
  name: time
  namespace: default
  resourceVersion: '102605'
  uid: f6df8d76-ab59-4f78-b545-e5039ba52e95
spec:
  ingressClassName: nginx
  rules:
    - host: jikan.localhost
      http:
        paths:
          - backend:
              service:
                name: jikan-ga-aru-server
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
      - ip: 192.168.49.2
